fixed admin button spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -212,14 +212,13 @@ i {
   align-items:flex-end;
   margin-left: 4px;
 }
-.options i {
+.options a {
   margin-left: 4px;
 }
 .approve-wrapper {
   overflow:hidden;
   height:23px;
   width:18px;
-  margin-right: 4px;
 }
 
 hr {
